--- a/www/src/main/resources/templates/member/cswrite.html
+++ b/www/src/main/resources/templates/member/cswrite.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<link rel="stylesheet" href="/css/csboardStyle.css">
-<link rel="stylesheet" href="/css/mainStyle.css">
+<link href="/css/csboardStyle00.css" rel="stylesheet">
+<link href="/css/mainStyle.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>글쓰기</title>
 </head>
 <body>
 <th:block th:replace="/fragment::header"></th:block>
-   <div id="csboard">
+   <div id="content-wrapper">
     <h1>QnA</h1>
     <form method="post">
         <div>
