--- a/www/src/main/resources/templates/member/myPage.html
+++ b/www/src/main/resources/templates/member/myPage.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>마이페이지</title>
-<link href="/css/myPageStyle00.css" rel="stylesheet">
+<link href="/css/myPageStyle.css" rel="stylesheet">
   <link href="/css/mainStyle.css" rel="stylesheet">
 </head>
 <body>
@@ -54,9 +54,7 @@
             </tr>
         </table>
 
-      
-
-    <a href="/member/delete/[[${session.user.accounts_idx}]]"><button class="submit">탈퇴</button></a>
+    <a th:href="@{/member/delete/{id}(id=${session.user.accounts_idx})}"><button class="submit">탈퇴</button></a>
     <a href="/member/update"><button class="submit">수정</button></a>
   </div>
 
