--- a/www/src/main/resources/templates/member/view.html
+++ b/www/src/main/resources/templates/member/view.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${row.title}">게시글 보기</title>
-    <link rel="stylesheet" href="/css/viewStyle.css"> <!-- 스타일을 위한 CSS 파일 경로 -->
+    <link href="/css/viewStyle00.css" rel="stylesheet">
     <link href="/css/mainStyle.css" rel="stylesheet">
 </head>
 <body>
 <th:block th:replace="/fragment::header"></th:block>
+
+		<div id="notice-inner">
+		<h2 class="notice">공지사항</h2>
     <div class="post-container">
         <h1 th:text="${row.title}">게시글 제목</h1>
-        <p><strong>작성자:</strong> <span th:text="${row.nick}">작성자</span></p>
-        <hr/>
+        <div class="post-info">
+            <p><strong>작성자:</strong> <span th:text="${row.nick}">작성자</span></p>
+            <p><strong>작성일:</strong> <span th:text="${row.w_date}">작성일</span></p>
+        </div>
+        <hr>
         <div class="post-content">
             <p th:text="${row.contents}">게시글 내용</p>
         </div>
@@ -19,10 +25,10 @@
   
   <!-- 글쓴 본인만 수정 삭제 버튼 활성화 -->
   <div th:if="${session.user != null and (session.user.nick == row.nick or session.user.nick == '관리자')}">
-    <button>수정</button>
+    <button class="modify">수정</button>
     <button>삭제</button>
   </div>
-  
+  </div>
   <script th:inline="javascript">
     let btns = document.querySelectorAll('button');
     
