--- a/www/src/main/resources/templates/member/findID.html
+++ b/www/src/main/resources/templates/member/findID.html
@@ -18,7 +18,7 @@
 	  </span>
 	  
 	  <span class="input-span">
-    <label for="email" class="label">Password</label>
+    <label for="email" class="label">Email</label>
     <input name="email" placeholder="EMAIL" type="email" required id="email"/>
   	</span>
   	
