--- a/www/src/main/resources/templates/place/traverserStory.html
+++ b/www/src/main/resources/templates/place/traverserStory.html
@@ -43,18 +43,18 @@
 			
 <div class="box-container">
       
-      <a href="/place/reviews">
+      <a th:href="@{/place/story/{idx}(idx=${rand1.idx})}">
        <div class="box box1">
          <div class="inner-box top-left">
-            <img src="/image/d1.jpg">
+            <img th:src="@{'/story/' + ${rand1.imge1}}">
          </div>
          <div class="inner-box top-right">
-            <img src="/image/d2.jpg">
+            <img th:src="@{'/story/' + ${rand1.imge2}}">
          </div>
          <div class="inner-box bottom">
-            <div class="text-line line1">도리(닉네임)</div>
-          <div class="text-line line2">도리 도리 여행(제목)</div>
-          <div class="text-line line3"># 부산, 2박 3일(여행지, 기간)</div>
+            <div class="text-line line1" th:text="${rand1.nick}">nick</div>
+          <div class="text-line line2" th:text="${rand1.title}">title</div>
+          <div class="text-line line3" th:text="${'# ' + rand1.regin + ', ' + daysBetween1 + '일'}"># 부산, 2박 3일(여행지, 기간)</div>
          </div>
          <div class="inner-box center">
             <img src="/image/d0.jpg">
@@ -62,18 +62,18 @@
        </div>
        </a>
        
-       <a href="/">
+       <a th:href="@{/place/story/{idx}(idx=${rand2.idx})}">
        <div class="box box2">
        <div class="inner-box top-left">
-            <img src="/image/s1.jpg">
+            <img th:src="@{'/story/' + ${rand2.imge1}}">
          </div>
          <div class="inner-box top-right">
-            <img src="/image/s2.jpg">
+            <img th:src="@{'/story/' + ${rand2.imge2}}">
          </div>
          <div class="inner-box bottom">
-            <div class="text-line line1">소백돌이</div>
-          <div class="text-line line2">진해 나들이</div>
-          <div class="text-line line3"># 창원, 1박 2일</div>
+            <div class="text-line line1" th:text="${rand2.nick}">소백돌이</div>
+          <div class="text-line line2" th:text="${rand2.title}">진해 나들이</div>
+          <div class="text-line line3" th:text="${'# ' + rand2.regin + ', ' + daysBetween2 + '일'}"># 창원, 1박 2일</div>
          </div>
          <div class="inner-box center">
             <img src="/image/s0.jpg">
@@ -81,15 +81,15 @@
        </div>
        </a>
        
-       <a href="/">
+       <a th:href="@{/place/story/{idx}(idx=${rand3.idx})}">
        <div class="box box3">
          <div class="inner-box top">
-            <img src="/image/l1.jpg">
+            <img th:src="@{'/story/' + ${rand3.imge1}}">
          </div>
          <div class="inner-box bottom">
-            <div class="text-line line1">새박사</div>
-          <div class="text-line line2">로또당첨</div>
-          <div class="text-line line3"># 춘천, 2박 3일</div>
+            <div class="text-line line1" th:text="${rand3.nick}">새박사</div>
+          <div class="text-line line2" th:text="${rand3.title}">로또당첨</div>
+          <div class="text-line line3" th:text="${'# ' + rand3.regin + ', ' + daysBetween3 + '일'}"># 춘천, 2박 3일</div>
          </div>
          <div class="inner-box center">
             <img src="/image/l0.jpg">
@@ -97,18 +97,18 @@
        </div>
        </a>
        
-       <a href="/">
+       <a th:href="@{/place/story/{idx}(idx=${rand4.idx})}">
        <div class="box box4">
           <div class="inner-box top-left">
-            <img src="/image/b1.jpg">
+            <img th:src="@{'/story/' + ${rand4.imge1}}">
          </div>
          <div class="inner-box top-right">
-            <img src="/image/b2.jpg">
+            <img th:src="@{'/story/' + ${rand4.imge2}}">
          </div>
          <div class="inner-box bottom">
-            <div class="text-line line1">받킨지</div>
-          <div class="text-line line2">베베랑 콩이랑~~</div>
-          <div class="text-line line3"># 제주, 2박 3일</div>
+            <div class="text-line line1" th:text="${rand4.nick}">받킨지</div>
+          <div class="text-line line2" th:text="${rand4.title}">베베랑 콩이랑~~</div>
+          <div class="text-line line3" th:text="${'# ' + rand4.regin + ', ' + daysBetween4 + '일'}"># 제주, 2박 3일</div>
          </div>
          <div class="inner-box center">
             <img src="/image/b4.jpg">
@@ -119,30 +119,7 @@
 		
     
 </div>
-<!-- 테이블 형식으로 게시글 목록을 표시 -->
-      <div class="table-container" style="margin-top: 50px;">
-          <h2>Story List</h2>
-          <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; text-align: left;">
-              <thead>
-                  <tr>
-                      <th>Title</th>
-                      <th>Region</th>
-                      <th>Dates</th>
-                      <th>Views</th>
-                      <th>Author</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr th:each="story : ${stories}">}(idx=${story.idx})}" th:text="${story.title}"></a></td>
-                      <td><a th:href="@{/place/story/{idx
-                      <td th:text="${story.regin}"></td>
-                      <td th:text="${story.seldate + ' - ' + story.enddate}"></td>
-                      <td th:text="${story.v_count}"></td>
-                      <td th:text="${story.nick}"></td>
-                  </tr>
-              </tbody>
-          </table>
-      </div>
+
 
 </div>
 
