--- a/www/src/main/resources/templates/member/customer.html
+++ b/www/src/main/resources/templates/member/customer.html
@@ -19,7 +19,7 @@
 				<li>|</li>
 				<li><a href="#faq" onclick="showSection('faq')">  FAQ  </a></li>
 				<li>|</li>
-				<li><a href="#qna" onclick="showSection('qna')">  Q&A  </a></li>
+				<li><a href="#qna" onclick="showSection('qna')">  자유 게시판  </a></li>
 
 			</ul>
 		</nav>
@@ -193,7 +193,7 @@ elfhsffffffffffffffflkdo
 	</section>
 
 	<section id="qna" class="section" style="display: none;">
-		<h2>Q&A</h2>
+		<h2>자유 게시판</h2>
 		<div class="qna-item">
 
 			<table class="rwd-table" id="qna">
