--- a/www/src/main/resources/templates/member/findID.html
+++ b/www/src/main/resources/templates/member/findID.html
@@ -13,7 +13,7 @@
   <form method="post" class="form">
   
 	  <span class="input-span">
-	    <label for="name" class="label">ID</label>
+	    <label for="name" class="label">Name</label>
 	    <input name="name" placeholder="NAME" type="text" required id="name"/>
 	  </span>
 	  
