--- a/www/src/main/resources/templates/member/csView.html
+++ b/www/src/main/resources/templates/member/csView.html
@@ -23,6 +23,8 @@
     </div>
   </div>
   
+  <div id="buttons">
+  <button onclick="history.go(-1);">뒤로가기</button>
     <!-- 글쓴 본인만 수정 삭제 버튼 활성화 -->
   <div
     th:if="${session.user != null and (session.user.nick == row.nick or session.user.nick == '관리자')}">
@@ -30,6 +32,7 @@
       th:href="@{/member/csUpdate/{board_idx}(board_idx=${row.board_idx})}"><button class="modify">수정</button></a>
     <a
       th:href="@{/member/csdelete/{board_idx}(board_idx=${row.board_idx})}"><button>삭제</button></a>
+  </div>
   </div>
 
   <!-- 댓글 작성 폼 -->
