--- a/www/src/main/resources/templates/member/view.html
+++ b/www/src/main/resources/templates/member/view.html
@@ -22,23 +22,25 @@
             <p th:text="${row.contents}">게시글 내용</p>
         </div>
     </div>
-  
+  <div id="buttons">
+  <button onclick="history.go(-1);">뒤로가기</button>
   <!-- 글쓴 본인만 수정 삭제 버튼 활성화 -->
   <div th:if="${session.user != null and (session.user.nick == row.nick or session.user.nick == '관리자')}">
     <button class="modify">수정</button>
     <button>삭제</button>
   </div>
   </div>
+  </div>
   <script th:inline="javascript">
     let btns = document.querySelectorAll('button');
     
     // 수정 버튼
-    btns[0].onclick = () => {
+    btns[1].onclick = () => {
       location.href = '/member/ann_update/[[${row.announcement_idx}]]';
     };
     
     // 삭제 버튼
-    btns[1].onclick = () => {
+    btns[2].onclick = () => {
       
       location.href = '/member/ann_delete/[[${row.announcement_idx}]]';
     };
