--- a/www/src/main/resources/static/css/LoginStyle.css
+++ b/www/src/main/resources/static/css/LoginStyle.css
@@ -65,6 +65,7 @@
   transition: all 300ms;
   font-weight: 600;
   font-size: 18px;
+  margin-top: 10px;
   
 }
 
@@ -88,4 +89,72 @@
 
 .span a:hover {
 	font-weight: bold;
+}
+
+
+.password-change-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 75vh;
+}
+
+/* 폼 스타일 */
+.password-change-container form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    max-width: 320px;
+    padding: 2rem;
+}
+
+/* 입력 필드 스타일 */
+.pwinput-span {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    font-size: 16px;
+}
+
+.pwinput-span input[type="password"] {
+    border-radius: 0.5rem;
+    padding: 1rem 0.75rem;
+    width: 100%;
+    border: 2px solid #2A3854;
+    background-color: #E8F0FE;
+    outline: none;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+.pwinput-span input[type="password"]:focus {
+    border: 2px solid #4BB958;
+}
+
+/* 라벨 스타일 */
+.pwinput-span .label {
+    color: #4BB958;
+    font-weight: 600;
+}
+
+/* 제출 버튼 스타일 */
+.password-change-container .submit {
+    padding: 1rem 0.75rem;
+    width: 100%;
+    background-color: #2A3854;
+    color: #E8F0FE;
+    border: none;
+    border-radius: 40px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 18px;
+    transition: background-color 0.3s ease;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.password-change-container .submit:hover {
+    background-color: #F89D4A;
+    color: #2A3854;
 }
