--- a/www/src/main/resources/static/css/traverserStoryStyle.css
+++ b/www/src/main/resources/static/css/traverserStoryStyle.css
@@ -181,6 +181,6 @@
   top: 55%;
   left: 20%;
   transform: translate(-50%, -50%);
-  background-color: #B898F4;
+  background-color: white;
   border-radius: 50%;
 }
