--- a/www/src/main/resources/templates/fragment.html
+++ b/www/src/main/resources/templates/fragment.html
@@ -12,13 +12,13 @@
       <ul class="navi">
         <li><a href="/"><img class="logo" th:src="@{/image/logo_w.png}"></a></li>
         <li th:if="${session.user == null}">
-          <a href="/member/login">login</a>
+          <a href="/member/login"  id="nick">login</a>
         </li>
         <li th:if="${session.user != null}">
         <div th:if="${session.user.profile}" class="userprofile">
         	<a href="/member/myPage"><img th:src="@{'/image/' + ${session.user.profile}}" /></a>
 				</div>
-        <a href="/member/myPage" th:text="${session.user.nick + '님'}">myPage</a>
+        <a href="/member/myPage" th:text="${session.user.nick + '님'}" id="nick">myPage</a>
         </li>
       </ul>
       
@@ -49,12 +49,12 @@
           <a href="/member/logout">로그아웃</a><br>
           <a href="/member/myPage">마이페이지</a><br>
         </th:block>
-        <a href="/member/like">like</a><br>
-        <a href="/member/customer">customer</a><br>
+        <a href="/member/like">찜</a><br>
+        <a href="/member/customer">고객지원</a><br>
         <a href="/place/travelplan">여행계획</a><br>        
         <a href="/member/accommodation">숙박</a><br>
         <a href="/member/index">길찾기</a><br>
-        <a href="/place/traverserStory">Traverser's Story</a>
+        <a href="/place/traverserStory">여행의 향기</a>
       </span>
       <label for="menuicon"></label>
     </div>
