--- a/www/src/main/resources/templates/member/cswrite.html
+++ b/www/src/main/resources/templates/member/cswrite.html
@@ -9,7 +9,7 @@
 <body>
 <th:block th:replace="/fragment::header"></th:block>
    <div id="content-wrapper">
-    <h1>QnA</h1>
+    <h1>자유게시판</h1>
     <form method="post">
         <div>
             <label for="title">제목:</label>
