--- a/www/src/main/resources/templates/member/accommodation.html
+++ b/www/src/main/resources/templates/member/accommodation.html
@@ -8,7 +8,7 @@
 <body>
 
     <th:block th:replace="/fragment::header"></th:block>
-    
+    <div id="accom">
     <h1>Search Places by AreaCode</h1>
     
         <!-- 검색 폼 -->
@@ -67,7 +67,7 @@
 
     <!-- 검색 결과가 없을 때 메시지 표시 -->
     <p th:if="${accommodationList != null and #lists.isEmpty(accommodationList)}">No results found.</p>
-
+    </div>
     <th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
