--- a/www/src/main/resources/templates/member/myPage.html
+++ b/www/src/main/resources/templates/member/myPage.html
@@ -41,7 +41,7 @@
                 <td>
                 <!-- 업로드된 프로필 사진 표시 -->
                     <div th:if="${session.user.profile}">
-                        <img th:src="@{'/image/' + ${session.user.profile}}" alt="Profile Image" style="width: 150px; height: 150px;" />
+                        <img th:src="@{'/image/profile/' + ${session.user.profile}}" alt="Profile Image" style="width: 150px; height: 150px;" />
 
                     </div>
                     <!-- 이미지 업로드 폼 
@@ -53,7 +53,7 @@
                 </td>
             </tr>
         </table>
-
+    <a href="/place/myplace"><button class="submit">쓴 글</button></a>
     <a th:href="@{/member/delete/{id}(id=${session.user.accounts_idx})}"><button class="submit">탈퇴</button></a>
     <a href="/member/update"><button class="submit">수정</button></a>
   </div>
