--- a/www/src/main/resources/templates/place/story_update.html
+++ b/www/src/main/resources/templates/place/story_update.html
@@ -4,26 +4,8 @@
     <meta charset="UTF-8">
     <title>게시글 수정</title>
     <link href="/css/mainStyle.css" rel="stylesheet">
-    <link href="/css/reviewsStyle.css" rel="stylesheet">
-    <style>
-        .form-group .add-image-button {
-            margin-top: 10px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            cursor: pointer;
-            padding: 5px 10px;
-            font-size: 14px;
-        }
+    <link href="/css/storyupStyle.css" rel="stylesheet">
 
-        .form-group .add-image-button:hover {
-            background-color: #218838;
-        }
-
-        .form-group .file-inputs {
-            margin-top: 10px;
-        }
-    </style>
     <script>
         function addFileInput() {
             const fileInputContainer = document.getElementById('file-input-container');
@@ -36,6 +18,9 @@
     </script>
 </head>
 <body>
+<th:block th:replace="/fragment::header"></th:block>
+
+  <div id="stup">
     <div class="content-container">
         <h1>게시글 수정</h1>
         <form th:action="@{'/place/story/' + ${story.idx}}" method="post" enctype="multipart/form-data">
@@ -68,34 +53,34 @@
                 <label>현재 이미지</label>
                 <div class="current-images">
                     <div th:if="${story.imge1 != null}">
-                        <img th:src="@{'/story/' + ${story.imge1}}" alt="이미지 1" style="max-width: 100px;">
+                        <img th:src="@{'/image/story/' + ${story.imge1}}" alt="이미지 1" style="max-width: 100px;">
                     </div>
                     <div th:if="${story.imge2 != null}">
-                        <img th:src="@{'/story/' + ${story.imge2}}" alt="이미지 2" style="max-width: 100px;">
+                        <img th:src="@{'/image/story/' + ${story.imge2}}" alt="이미지 2" style="max-width: 100px;">
                     </div>
                     <div th:if="${story.imge3 != null}">
-                        <img th:src="@{'/story/' + ${story.imge3}}" alt="이미지 3" style="max-width: 100px;">
+                        <img th:src="@{'/image/story/' + ${story.imge3}}" alt="이미지 3" style="max-width: 100px;">
                     </div>
                     <div th:if="${story.imge4 != null}">
-                        <img th:src="@{'/story/' + ${story.imge4}}" alt="이미지 4" style="max-width: 100px;">
+                        <img th:src="@{'/image/story/' + ${story.imge4}}" alt="이미지 4" style="max-width: 100px;">
                     </div>
                     <div th:if="${story.imge5 != null}">
-                        <img th:src="@{'/story/' + ${story.imge5}}" alt="이미지 5" style="max-width: 100px;">
+                        <img th:src="@{'/image/story/' + ${story.imge5}}" alt="이미지 5" style="max-width: 100px;">
                     </div>
                     <div th:if="${story.imge6 != null}">
-                        <img th:src="@{'/story/' + ${story.imge6}}" alt="이미지 6" style="max-width: 100px;">
+                        <img th:src="@{'/image/story/' + ${story.imge6}}" alt="이미지 6" style="max-width: 100px;">
                     </div>
                     <div th:if="${story.imge7 != null}">
-                        <img th:src="@{'/story/' + ${story.imge7}}" alt="이미지 7" style="max-width: 100px;">
+                        <img th:src="@{'/image/story/' + ${story.imge7}}" alt="이미지 7" style="max-width: 100px;">
                     </div>
                     <div th:if="${story.imge8 != null}">
-                        <img th:src="@{'/story/' + ${story.imge8}}" alt="이미지 8" style="max-width: 100px;">
+                        <img th:src="@{'/image/story/' + ${story.imge8}}" alt="이미지 8" style="max-width: 100px;">
                     </div>
                     <div th:if="${story.imge9 != null}">
-                        <img th:src="@{'/story/' + ${story.imge9}}" alt="이미지 9" style="max-width: 100px;">
+                        <img th:src="@{'/image/story/' + ${story.imge9}}" alt="이미지 9" style="max-width: 100px;">
                     </div>
                     <div th:if="${story.imge10 != null}">
-                        <img th:src="@{'/story/' + ${story.imge10}}" alt="이미지 10" style="max-width: 100px;">
+                        <img th:src="@{'/image/story/' + ${story.imge10}}" alt="이미지 10" style="max-width: 100px;">
                     </div>
                 </div>
             </div>
@@ -111,5 +96,7 @@
             <button type="submit" class="submit-btn">수정 완료</button>
         </form>
     </div>
+    </div>
+    <th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
