디테일페이지 상세정보,타입별 여행지

--- a/www/src/main/resources/templates/duration.html
+++ b/www/src/main/resources/templates/duration.html
@@ -22,7 +22,8 @@
           <br>
           <label for="selected-dates-display">선택한 날짜:</label>
           <input name="seldate" type="text" id="selected-dates-display" readonly> <!-- 선택한 날짜를 표시할 input -->
-
+          <input name="type1" type="hidden" th:value="0">
+           
           <button type="submit">선택</button>
         </form>
       </span>
