--- a/www/src/main/resources/static/css/tabStyle.css
+++ b/www/src/main/resources/static/css/tabStyle.css
@@ -100,6 +100,9 @@
         .plan div:nth-child(2){
           padding: 5px;
         }
+        .plan div:nth-child(3){
+          padding: 5px;
+        }
         
          .checkbox-container {
             display: flex;
@@ -135,13 +138,26 @@
         }
         
         .plandata div:hover {
-				    color: #4CAF50;
-				    font-weight: bold; /* 글자를 두껍게 */
-				    transform: scale(1.01); /* 텍스트가 튀어나오는 효과 */   
-				}
-				.markerstyle{
-		      width: 200px;
-		      min-height: 25px;
-		      text-align: center;
-		      font-weight: bold;
-		     }
+            color: #4CAF50;
+            font-weight: bold; /* 글자를 두껍게 */
+            transform: scale(1.01); /* 텍스트가 튀어나오는 효과 */   
+        }
+        .markerstyle{
+          width: 200px;
+          min-height: 25px;
+          text-align: center;
+          font-weight: bold;
+         }
+         .custom-tab-row{
+          text-align: center;
+         }
+         .custom-tab-row button{
+          width: 80px;
+          height: 50px;
+          margin: 10px;
+          border-radius: 10px;
+         }
+         .custom-tab-link:hover {
+            background-color: #4CAF50;
+            color: white;
+        }
