--- a/www/src/main/resources/templates/member/detail.html
+++ b/www/src/main/resources/templates/member/detail.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <th:block th:replace="/fragment::header"></th:block>
-   <header>
+   
+   <div id="detail">
+    <header>
       <div class="navbar">
          <div class="navbar-left">
-            <h1 th:text="${detail.title}">이름</h1>
+            <h1 th:text="${place['title']}">이름</h1>
          </div>
          <div class="navbar-right">
         <div class="heart-container" title="Like">
@@ -41,48 +43,154 @@
 
    <section class="slider">
       <div class="slide">
-         <img th:src="${detail.firstimage}" alt="Image 1">
+
+         <img th:if="${place['firstimage'] != null and !place['firstimage'].isEmpty()}"
+         th:src="${place.firstimage}" alt="Image" class="placefirstimage" />
+        <!-- 이미지가 없을 때 -->
+         <img th:if="${place['firstimage'] == null or place['firstimage'].isEmpty()}"
+          th:src="@{/image/logo_w.png}" alt="Default Image"  class="placefirstimage"/>
       </div>
       <div class="slide">
-         <img th:src="${detail.firstimage2}" alt="Image 2">
+          <table>  
+          <tbody th:if="@{${place['contenttypeid']} == 14}">
+          <tr>
+            <th>쉬는날</th>
+            <td th:text="${detail['restculture']}"></td>
+          </tr>
+          <tr>
+            <th>이용시간</th>    
+             <td th:text="${detail['usetimeculture']}"></td>
+          </tr>
+          <tr>
+            <th>이용요금</th>
+            <td th:text="${detail['usefee']}"></td>
+          </tr>
+          <tr>
+            <th>문의 및 안내</th>
+            <td th:text="${detail['infocenterculture']}"></td>
+          </tr>
+          <tr>
+            <th>주차시설</th>
+            <td th:text="${detail['parkingculture']}"></td>
+          </tr>
+          <tr>
+            <th>유모차 대여여부</th>
+            <td th:text="${detail['chkbagcarriageculture']}"></td>
+          </tr>
+          </tbody>
+          <tbody th:if="@{${place['contenttypeid']} == 12}">
+          <tr>
+            <th>문의 및 안내</th>
+            <td th:text="${detail['info']}"></td>
+          </tr>
+          <tr>
+            <th>체험가능연령</th>    
+             <td th:text="${detail['expgname']}"></td>
+          </tr>
+          <tr>
+            <th>쉬는날</th>
+            <td th:text="${detail['restdate']}"></td>
+          </tr>
+          <tr>
+            <th>이용시간</th>
+            <td th:text="${detail['usetime']}"></td>
+          </tr>
+          <tr>
+            <th>주차</th>
+            <td th:text="${detail['parking']}"></td>
+          </tr>
+          <tr>
+            <th>유모차 대여 여부</th>
+            <td th:text="${detail['chkbagcarriage']}"></td>
+          </tr>
+          <tr>
+            <th>애완동물 동반가능 여부</th>
+            <td th:text="${detail['chkpet']}"></td>
+          </tr>
+          </tbody>
+          <tbody th:if="@{${place['contenttypeid']} == 28}">
+          <tr>
+            <th>문의 및 안내</th>
+            <td th:text="${detail['incentreleports']}"></td>
+          </tr>
+          <tr>
+            <th>쉬는날</th>    
+             <td th:text="${detail['restateleports']}"></td>
+          </tr>
+          <tr>
+            <th>이용시간</th>
+            <td th:text="${detail['usetimeleports']}"></td>
+          </tr>
+          <tr>
+            <th>주차시설</th>
+            <td th:text="${detail['parkingleports']}"></td>
+          </tr>
+          <tr>
+            <th>parkingfeeleports</th>
+            <td th:text="${detail['parkingfeeleports']}"></td>
+          </tr>
+          </tbody>
+          <tbody th:if="@{${place['contenttypeid']} == 32}">
+          <tr>
+            <th>문의 및 안내</th>
+            <td th:text="${detail['incentreleports']}"></td>
+          </tr>
+          <tr>
+            <th>체크인</th>    
+             <td th:text="${detail['chkintime']}"></td>
+          </tr>
+          <tr>
+            <th>체크아웃</th>
+            <td th:text="${detail['chkouttime']}"></td>
+          </tr>
+          <tr>
+            <th>조리가능여부</th>
+            <td th:text="${detail['cooking']}"></td>
+          </tr>
+          <tr>
+            <th>roomtype</th>
+            <td th:text="${detail['roomtype']}"></td>
+          </tr>
+          <tr>
+            <th>주차 가능 여부</th>
+            <td th:text="${detail['parkinglodging']}"></td>
+          </tr>
+          <tr>
+            <th>예약안내 홈페이지</th>
+            <td th:text="${detail['reservationurl']}"></td>
+          </tr>
+          </tbody>
+          <tbody th:if="@{${place['contenttypeid']} == 39}">
+          <tr>
+            <th>문의 및 안내</th>
+            <td th:text="${detail['infocenterfood']}"></td>
+          </tr>
+          <tr>
+            <th>오픈시간</th>    
+             <td th:text="${detail['opentimefood']}"></td>
+          </tr>
+          <tr>
+            <th>대표메뉴</th>
+            <td th:text="${detail['firstmenu']}"></td>
+          </tr>
+          <tr>
+            <th>쉬는날</th>
+            <td th:text="${detail['restdatefood']}"></td>
+          </tr>
+          </tbody>
+         </table>
       </div>
    </section>
-
-   <section class="description">
-      <h2>장소명</h2>
-      <table>
-         <tr>
-            <td>Title:</td>
-            <td th:text="${detail.title}"></td>
-         </tr>
-         <tr>
-            <td>Address:</td>
-            <td th:text="${detail.addr1}"></td>
-         </tr>
-         <tr>
-            <td>전화번호:</td>
-            <td th:text="${detail.tel}"></td>
-         </tr>
-      </table>
-   </section>
-
+   
    <section class="features">
-      <h2>지도 좌표</h2>
-      <table>
-         <tr>
-            <td>Map X:</td>
-            <td th:text="${detail.mapx}"></td>
-         </tr>
-         <tr>
-            <td>Map Y:</td>
-            <td th:text="${detail.mapy}"></td>
-         </tr>
-      </table>
+      <h2>개요</h2>
+      <div th:text="${place['overview']}"></div>
    </section>
+   
 
-   <!-- 별점 및 후기 섹션 -->
    <section class="reviews">
-      <h2>후기 및 별점</h2>
+   
+   <h2>후기 및 별점</h2>
       <div>
          <span>평균 별점: <strong id="average-rating">0</strong></span> / 5
       </div>
@@ -97,20 +205,20 @@
             <span class="rating-value" th:text="${review.rating}"
                style="display: none;"></span>
          </p>
-         <!-- 수정 및 삭제 버튼 (본인 또는 관리자만) -->
+         
+          <!-- 수정 및 삭제 버튼 (본인 또는 관리자만) -->
          <div
             th:if="${review.a_idx == session.user.accounts_idx or session.user.role == 'ADMIN'}">
             <button th:onclick="|fn_update('${review.drep_idx}')|"
                th:classid="editBtn_" type="button">수정</button>
             <form
-               th:action="@{/member/review/delete/{id}(id=${review.drep_idx})}"
+               th:action="@{/member/review/delete/{id}(id=${review.drep_idx},contenttypeid=${detail['contenttypeid']},contentid=${detail['contentid']})}"
                method="post" style="display: inline;">
                <!-- p_idx를 히든 필드로 추가 -->
                <input type="hidden" name="p_idx" th:value="${review.p_idx}">
                <button type="submit">삭제</button>
             </form>
          </div>
-
          <!-- 수정 폼 (기본적으로 숨김) -->
          <div th:id="'editForm_' + ${review.drep_idx}" style="display: none">
             <form method="POST" th:action="@{/member/review/edit}">
@@ -131,35 +239,31 @@
                <button type="submit">수정 완료</button>
                <input name="drep_idx" type="hidden" th:value="${review.drep_idx}">
                <input name="p_idx" type="hidden" th:value="${review.p_idx}">
+               <input name="contentid" type="hidden" th:value="${detail['contentid']}">
+         <input name="contenttypeid" type="hidden" th:value="${detail['contenttypeid']}">
             </form>
          </div>
-      </div>
-
-
-      <!-- 후기 작성 폼 -->
-      <form id="reviewForm" method="POST" th:action="@{/member/review}">
+         
+   </div>
+   <form id="reviewForm" method="POST" th:action="@{/member/review}">
          <div class="rating">
-            <label> <input type="radio" name="rating" value="1">
-               1
-            </label> <label> <input type="radio" name="rating" value="2">
-               2
-            </label> <label> <input type="radio" name="rating" value="3">
-               3
-            </label> <label> <input type="radio" name="rating" value="4">
-               4
-            </label> <label> <input type="radio" name="rating" value="5">
-               5
-            </label>
+            <label> <input type="radio" name="rating" value="1">1</label> 
+            <label> <input type="radio" name="rating" value="2">2</label> 
+            <label> <input type="radio" name="rating" value="3">3</label> 
+            <label> <input type="radio" name="rating" value="4">4</label> 
+            <label> <input type="radio" name="rating" value="5">5</label>
          </div>
          <textarea name="contents" placeholder="후기를 작성하세요"></textarea>
          <button type="submit">등록</button>
-         <input name="a_idx" type="hidden"
-            th:value="${session.user.accounts_idx}"> <input name="p_idx"
-            type="hidden" th:value="${detail.idx}">
+         <input name="a_idx" type="hidden" th:value="${session.user.accounts_idx}"> 
+         <input name="p_idx" type="hidden" th:value="${detailpage.idx}">
+         <input name="contentid" type="hidden" th:value="${detail['contentid']}">
+         <input name="contenttypeid" type="hidden" th:value="${detail['contenttypeid']}">
       </form>
+  
    </section>
-
-   <script type="text/javascript">
+    </div>
+      <script type="text/javascript">
 document.addEventListener("DOMContentLoaded", function() {
     // 리뷰 항목들을 가져옴
     const reviews = document.querySelectorAll('.review-item');
@@ -190,12 +294,12 @@ function handleLike() {
     const checkbox = document.getElementById('Give-It-An-Id');
     const data = {
         a_idx: [[${session.user.accounts_idx}]],  
-        title: "[[${detail.title}]]",
-        addr1: "[[${detail.addr1}]]",
-        firstimage: "[[${detail.firstimage}]]",
-        mapx: [[${detail.mapx}]],
-        mapy: [[${detail.mapy}]],
-        p_idx: [[${detail.idx}]]
+        title: "[[${detailpage.title}]]",
+        addr1: "[[${detailpage.addr1}]]",
+        firstimage: "[[${detailpage.firstimage}]]",
+        mapx: [[${detailpage.mapx}]],
+        mapy: [[${detailpage.mapy}]],
+        p_idx: [[${detailpage.idx}]]
     };
 
     if (checkbox.checked) {
@@ -242,6 +346,7 @@ function handleLike() {
   </script>
 
     <th:block th:replace="/fragment::footer"></th:block>
+
 
 </body>
 </html>
